Use public GeoJSON data

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 }
               },
               {
-                server: 'http://localhost:8001/api/v1',
-                tilesetUid: 'ski-resorts',
+                server: 'http://resgen.io/api/v1',
+                tilesetUid: 'OcKta-WuQ_KBXZsDMSex_Q',
                 type: 'geo-json',
                 options: {
                   labelColor: 'red',
