Serve from public test server

--- a/src/index.html
+++ b/src/index.html
@@ -130,8 +130,8 @@ const testViewConfig = {
                 },
               },
               {
-                server: 'http://localhost:8001/api/v1',
-                tilesetUid: 'ski-resorts',
+                server: 'https://vcg-higlass.rc.fas.harvard.edu/api/v1',
+                tilesetUid: 'ski-areas',
                 type: 'geo-json',
                 options: {
                   labelColor: 'red',
