--- a/index.html
+++ b/index.html
@@ -1,43 +1,21 @@
-<!DOCTYPE html> <head> <meta charset=utf-8> <meta name=viewport content="width=device-width,initial-scale=1"> <title>HiGlass</title> <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css> <link rel=stylesheet href=hglib.css> <script src=https://cdnjs.cloudflare.com/ajax/libs/react/15.6.2/react.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/react-dom/15.6.2/react-dom.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.2/pixi.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.32.0/react-bootstrap.min.js></script> </head> <body> <div style=height:50px /> <div id=demo style=position:absolute;left:1rem;top:1rem;bottom:1rem;right:1rem> </div>  <script type="text/javascript" src="higlass-geojson.min.js"></script></body> <script src=hglib.js></script> <script> const testViewConfig = {
+<!DOCTYPE html> <head> <meta charset=utf-8> <meta name=viewport content="width=device-width,initial-scale=1"> <title>HiGlass</title> <style type=text/css>body,html{background:#000!important}</style> <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css> <link rel=stylesheet href=hglib.css> <script src=https://cdnjs.cloudflare.com/ajax/libs/react/15.6.2/react.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/react-dom/15.6.2/react-dom.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.2/pixi.min.js></script> <script src=https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.32.0/react-bootstrap.min.js></script> </head> <body> <div style=height:50px /> <div id=demo style=position:absolute;left:1rem;top:1rem;bottom:1rem;right:1rem> </div>  <script type="text/javascript" src="higlass-image.min.js"></script></body> <script src=hglib.js></script> <script> const testViewConfig = {
   editable: true,
   zoomFixed: false,
   trackSourceServers: ['http://higlass.io/api/v1'],
   exportViewUrl: 'http://higlass.io/api/v1/viewconfs/',
   views: [
     {
-      initialXDomain: [-114.34492062432261, -103.1400637535123],
-      initialYDomain: [-46.99008821605368, -39.07861292139287],
+      initialXDomain: [0, 454330],
+      initialYDomain: [0, 149278],
       tracks: {
         center: [
           {
-            type: 'combined',
-            contents: [
-              {
-                type: 'osm-tiles',
-                options: {
-                  name: 'World-wide Ski Areas',
-                }
-              },
-              {
-                server: 'http://resgen.io/api/v1',
-                tilesetUid: 'OcKta-WuQ_KBXZsDMSex_Q',
-                type: 'geo-json',
-                options: {
-                  labelColor: 'red',
-                  labelPosition: 'hidden',
-                  trackBorderWidth: 0,
-                  trackBorderColor: 'red',
-                  rectangleDomainFillColor: 'red',
-                  rectangleDomainFillOpacity: 0.25,
-                  rectangleDomainStrokeColor: 'red',
-                  rectangleDomainOpacity: 1,
-                  rectanlgeMinSize: 3,
-                  minSquareSize: 4,
-                  polygonMinBoundingSize: 5,
-                  name: 'Ski Areas',
-                },
-              },
-            ],
+            type: 'image-tiles',
+            server: 'http://resgen.io/api/v1/',
+            tilesetUid: 'eq9t-f0vReCuHnm8wc2mDA',
+            options: {
+              name: 'Gigapan Image 66020',
+            },
           },
         ],
       },
@@ -58,5 +36,5 @@
 window.hglib.createHgComponent(
   document.getElementById('demo'),
   testViewConfig,
-  { bounded: true },
+  { bounded: true, isDarkTheme: true },
 ); </script> 
