Remove unnecessary closing tag

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <title>HiGlass GeoJSON Track</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
-  
-  <link rel="stylesheet" href="https://unpkg.com/higlass/dist/styles/hglib.css"></link>
-  
+
+  <link rel="stylesheet" href="https://unpkg.com/higlass/dist/styles/hglib.css">
+
 
   <style type="text/css">
     html,
