Remove unnecessary closing tag

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
   <% if (htmlWebpackPlugin.options.isProduction) { %>
-  <link rel="stylesheet" href="https://unpkg.com/higlass/dist/styles/hglib.css"></link>
+  <link rel="stylesheet" href="https://unpkg.com/higlass/dist/styles/hglib.css">
   <% } else { %>
-  <link rel="stylesheet" href="hglib.css"></link>
+  <link rel="stylesheet" href="hglib.css">
   <% } %>
 
   <style type="text/css">
