--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
 
   <title>HiGlass GeoJSON Track</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
   <% if (htmlWebpackPlugin.options.isProduction) { %>
   <link rel="stylesheet" href="https://unpkg.com/higlass@1.2.8/dist/hglib.css">
   <% } else { %>
@@ -39,6 +41,7 @@
     body {
       margin: 0;
       padding: 0;
+      font-family: 'Open Sans', sans-serif;
       background: black !important;
     }
     #demo {
