--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ const viewConfig = {
   ],
 };
 
-window.hglib.createHgComponent(
+window.hglib.viewer(
   document.getElementById('demo'),
   viewConfig,
   { bounded: true, isDarkTheme: true },
