--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@ const viewConfig = {
   ],
 };
 
-window.hglib.createHgComponent(
+window.hglib.viewer(
   document.getElementById('demo'),
   viewConfig,
   { bounded: true, isDarkTheme: true },
