Update to HiGlass v1.5

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-  
-  <link rel="stylesheet" href="https://unpkg.com/higlass@1.2.3/dist/styles/hglib.css">
-  
+  <link rel="stylesheet" href="hglib.css">
 
   <style type="text/css">
     html,
@@ -90,9 +88,9 @@
     }
   </style>
 
-  <script src="https://unpkg.com/react@16.5.2/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/pixi.js@4.8.2/dist/pixi.min.js"></script>
+  <script src="https://unpkg.com/react@16.6/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16.6/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/pixi.js@4.8/dist/pixi.min.js"></script>
   <script src="https://unpkg.com/react-bootstrap@0.32.1/dist/react-bootstrap.min.js"></script>
 </head>
 <body>
@@ -110,10 +108,8 @@
     </div>
   </div>
   <div id="demo"></div>
-<script type="text/javascript" src="higlass-geojson.min.js"></script></body>
-
-<script src="https://unpkg.com/higlass@1.2.3/dist/scripts/hglib.js"></script>
-
+<script type="text/javascript" src="./example.js"></script></body>
+<script src="hglib.js"></script>
 <script>
 const viewConfig = {
   editable: false,
@@ -132,8 +128,8 @@ const viewConfig = {
               {
                 type: 'osm-tiles',
                 options: {
-                  name: 'World-wide ski Areas',
-                },
+                  name: 'World-wide ski Areas'
+                }
               },
               {
                 server: 'https://vcg-higlass.rc.fas.harvard.edu/api/v1',
@@ -151,12 +147,12 @@ const viewConfig = {
                   rectanlgeMinSize: 3,
                   minSquareSize: 4,
                   polygonMinBoundingSize: 5,
-                  name: 'Ski Areas',
-                },
-              },
-            ],
-          },
-        ],
+                  name: 'Ski Areas'
+                }
+              }
+            ]
+          }
+        ]
       },
       layout: {
         w: 12,
@@ -164,16 +160,15 @@ const viewConfig = {
         x: 0,
         y: 0,
         moved: false,
-        static: false,
-      },
-    },
-  ],
+        static: false
+      }
+    }
+  ]
 };
 
-window.hglib.viewer(
-  document.getElementById('demo'),
-  viewConfig,
-  { bounded: true, isDarkTheme: true },
-);
+window.hglib.viewer(document.getElementById('demo'), viewConfig, {
+  bounded: true,
+  isDarkTheme: true
+});
 </script>
 </html>
